--- a/8.0 CSS Display/index.html
+++ b/8.0 CSS Display/index.html
@@ -22,7 +22,27 @@
     }
 
     .green {
-      display: inline;
+      display: block;
+      width: 200px;
+      height: 200px;
+      background-color: green;
+    }
+
+    .blue {
+      display: block;
+      width: 200px;
+      height: 200px;
+      background-color: blue;
+    }
+    /* .red {
+      display: inline-block;
+      width: 200px;
+      height: 200px;
+      background-color: red;
+    }
+
+    .green {
+      display: inline-block;
       width: 200px;
       height: 200px;
       background-color: green;
@@ -33,7 +53,7 @@
       width: 200px;
       height: 200px;
       background-color: blue;
-    }
+    } */
   </style>
 </head>
 
